--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "fs-extra": "^9.0.1",
     "globby": "^11.0.1",
+    "lodash": "^4.17.20",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.4",
     "@types/globby": "^9.1.0",
+    "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.8",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
