--- a/package.json
+++ b/package.json
@@ -7,25 +7,33 @@
   "scripts": {
     "watch": "yarn tsc --watch --incremental",
     "build": "yarn tsc",
-    "lint": "yarn lint"
+    "lint": "yarn lint",
+    "test": "jest"
   },
   "dependencies": {
     "chalk": "^4.1.0",
+    "expect": "^26.6.2",
     "fs-extra": "^9.0.1",
     "globby": "^11.0.1",
     "lodash": "^4.17.20",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
     "@types/fs-extra": "^9.0.4",
     "@types/globby": "^9.1.0",
+    "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.8",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.13.0",
+    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.6.3",
     "prettier": "^2.1.2",
+    "tempy": "^1.0.0",
     "ts-node": "^9.0.0"
   }
 }
