--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
         "prettier/prettier": ["error", { "singleQuote": true }],
         "jest/no-identical-title": "error",
         "jest/prefer-to-have-length": "warn",
-        "jest/valid-expect": "error"
+        "jest/valid-expect": "error",
+        "@typescript-eslint/ban-ts-comment": "off"
     }
 }
