--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
     "tempy": "^1.0.0",
-    "ts-node": "^9.0.0"
+    "ts-node": "^9.0.0",
+    "typed-emitter": "^1.3.1"
   }
 }
