--- a/package.json
+++ b/package.json
@@ -1,40 +1,29 @@
 {
-  "name": "migratejs",
-  "version": "1.0.0",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
-  "license": "MIT",
+  "name": "migratejs-monorepo",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "watch": "yarn tsc --watch --incremental",
-    "build": "yarn tsc",
-    "lint": "yarn lint",
+    "watch": "yarn tsc -b --watch --incremental",
+    "build": "yarn tsc -b",
+    "lint": "eslint .",
     "test": "jest"
   },
-  "dependencies": {
-    "chalk": "^4.1.0",
-    "expect": "^26.6.2",
-    "fs-extra": "^9.0.1",
-    "globby": "^11.0.1",
-    "lodash": "^4.17.20",
-    "typescript": "^4.0.5"
-  },
   "devDependencies": {
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
-    "@types/fs-extra": "^9.0.4",
-    "@types/globby": "^9.1.0",
-    "@types/jest": "^26.0.15",
-    "@types/lodash": "^4.14.165",
-    "@types/node": "^14.14.8",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
+    "lerna": "^3.22.1",
     "eslint": "^7.13.0",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
-    "tempy": "^1.0.0",
     "ts-node": "^9.0.0",
-    "typed-emitter": "^1.3.1"
+    "typescript": "^4.0.5",
+    "@types/node": "^14.14.8",
+    "@types/jest": "^26.0.15",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1"
   }
 }
