--- a/packages/migratejs/tsconfig.json
+++ b/packages/migratejs/tsconfig.json
@@ -1,14 +1,8 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2018",
-    "module": "commonjs",
     "outDir": "build",
     "rootDir": "src",
-    "declaration": true,
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
   },
   "include": ["src", "./migratejs.d.ts"]
 }
