--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,14 +10,26 @@ on:
     branches: [ main ]
 
 jobs:
+  lint:   
+      runs-on: ubuntu-latest
+      steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+      - run: npm install -g yarn
+      - name: yarn install, build, and lint
+        run: |
+          yarn
+          yarn build
+          yarn lint
+
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [10.x, 12.x, 14.x]
-
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
