--- a/packages/migratejs/package.json
+++ b/packages/migratejs/package.json
@@ -17,12 +17,15 @@
     "fs-extra": "^9.0.1",
     "globby": "^11.0.1",
     "lodash": "^4.17.20",
+    "prompts": "^2.4.0",
     "ts-node": "^9.0.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.4",
     "@types/globby": "^9.1.0",
     "@types/lodash": "^4.14.165",
+    "@types/prompts": "^2.0.9",
+    "prompts": "^2.4.0",
     "tempy": "^1.0.0",
     "typed-emitter": "^1.3.1"
   }
