--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build-clean": "rm -rf ./packages/*/build ./packages/*/tsconfig.tsbuildinfo",
     "clean": "yarn build-clean && rm -rf ./packages/*/node_modules && rm -rf ./node_modules",
-    "watch": "yarn tsc -b --watch --incremental packages/migratejs",
-    "build": "yarn tsc -b packages/migratejs",
+    "watch": "yarn tsc -b --watch --incremental packages/migratejs/tsconfig.prod.json",
+    "build": "yarn tsc -b packages/migratejs/tsconfig.prod.json",
     "lint": "eslint .",
     "test": "jest"
   },
