--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
     "test": "jest"
   },
   "devDependencies": {
-    "lerna": "^3.22.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.8",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.13.0",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
+    "lerna": "^3.22.1",
     "prettier": "^2.1.2",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.5",
-    "@types/node": "^14.14.8",
-    "@types/jest": "^26.0.15",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1"
+    "type-fest": "^0.19.0",
+    "typescript": "^4.0.5"
   }
 }
