--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@types/node": "^14.14.8",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
+    "ast-types": "^0.14.2",
     "eslint": "^7.13.0",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
     "prettier": "^2.1.2",
+    "recast": "^0.20.4",
     "ts-node": "^9.0.0",
     "type-fest": "^0.19.0",
     "typescript": "^4.0.5"
