--- a/packages/code-migrate/package.json
+++ b/packages/code-migrate/package.json
@@ -29,6 +29,7 @@
     "import-fresh": "^3.2.2",
     "lodash": "^4.17.20",
     "prompts": "^2.4.0",
+    "tempy": "^1.0.0",
     "ts-node": "^9.0.0"
   },
   "devDependencies": {
