--- a/packages/code-migrate/package.json
+++ b/packages/code-migrate/package.json
@@ -27,6 +27,7 @@
     "globby": "^11.0.1",
     "import-fresh": "^3.2.2",
     "lodash": "^4.17.20",
+    "mock-require": "^3.0.3",
     "prompts": "^2.4.0",
     "tempy": "^1.0.0",
     "ts-node": "^9.0.0"
