add createVersion script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "watch": "yarn tsc -b --watch --incremental packages/code-migrate/tsconfig.prod.json",
     "build": "yarn tsc -b packages/code-migrate/tsconfig.prod.json",
     "lint": "eslint .",
-    "test": "jest"
+    "test": "jest",
+    "createVersion": "yarn build-clean && yarn build && yarn test && lerna publish"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.1",
