--- a/packages/code-migrate/package.json
+++ b/packages/code-migrate/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "arg": "^5.0.0",
     "chalk": "^4.1.0",
+    "execa": "^5.0.0",
     "expect": "^26.6.2",
     "fs-extra": "^9.0.1",
     "globby": "^11.0.1",
