--- a/package.json
+++ b/package.json
@@ -24,12 +24,22 @@
     "eslint": "^7.13.0",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.1.4",
+    "husky": ">=4",
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
+    "lint-staged": ">=10",
     "prettier": "^2.1.2",
     "recast": "^0.20.4",
     "ts-node": "^9.0.0",
     "type-fest": "^0.19.0",
     "typescript": "^4.0.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix"
   }
 }
