--- a/packages/code-migrate/package.json
+++ b/packages/code-migrate/package.json
@@ -4,7 +4,7 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "bin": {
-    "migrate": "bin/migrate"
+    "code-migrate": "bin/code-migrate"
   },
   "files": [
     "src",
