--- a/packages/code-migrate/package.json
+++ b/packages/code-migrate/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.20",
     "mock-require": "^3.0.3",
     "prompts": "^2.4.0",
+    "string.prototype.replaceall": "^1.0.4",
     "tempy": "^1.0.0",
     "ts-node": "^9.0.0"
   },
@@ -39,6 +40,7 @@
     "@types/lodash": "^4.14.165",
     "@types/prompts": "^2.0.9",
     "prompts": "^2.4.0",
+    "string.prototype.replaceall": "^1.0.4",
     "strip-ansi": "^6.0.0",
     "tempy": "^1.0.0",
     "typed-emitter": "^1.3.1"
