--- a/packages/code-migrate/package.json
+++ b/packages/code-migrate/package.json
@@ -39,6 +39,7 @@
     "@types/lodash": "^4.14.165",
     "@types/prompts": "^2.0.9",
     "prompts": "^2.4.0",
+    "string.prototype.replaceall": "^1.0.4",
     "strip-ansi": "^6.0.0",
     "tempy": "^1.0.0",
     "typed-emitter": "^1.3.1"
