migrate to yarn 3

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ build
 tsconfig.tsbuildinfo
 tsconfig.prod.tsbuildinfo
 .DS_Store
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
