--- a/packages/code-migrate/package.json
+++ b/packages/code-migrate/package.json
@@ -41,6 +41,7 @@
     "@types/globby": "^9.1.0",
     "@types/lodash": "^4.14.165",
     "@types/prompts": "^2.0.9",
+    "jest": "^28.0.2",
     "prompts": "^2.4.0",
     "string.prototype.replaceall": "^1.0.4",
     "strip-ansi": "^6.0.0",
